--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,12 @@
   min-height: auto; /* optional: make all boxes same height */
   box-sizing: border-box;
 }
+
+.cl-drawerRoot{
+  z-index: 10
+}
+
+.reset-tw, .reset-tw *{
+  all: revert !important;
+}
+
